feat(anki): improve flashcard lifecycle workflow and sync process